清除冗余